--- a/basics.html
+++ b/basics.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Ryan's Tennis Site</title>
 </head>
-<body class="container home">
+<body class="container">
 
     <nav class="navbar fixed-top px-3 tp-ylw">
         <a class="navbar-brand" href="index.html"> 
@@ -34,31 +34,5 @@
 
 
 
-    <div class="row">
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn top text-center" href="basics.html">
-            <h2>
-                Basics
-            </h2>
-        </a>
-        <div class="col-md-2"></div>
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn top text-center" href="varients.html">
-            <h2>
-                Varients
-            </h2>
-        </a>
-    </div>
-
-    <div class="row">
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn text-center" href="pros.html">
-            <h2>
-                Pros
-            </h2>
-        </a>
-        <div class="col-md-2"></div>
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn text-center"  href="why-play.html">
-            <h2>
-                Why To Play
-            </h2>
-        </a>
-    </div>
+    
 </body>
