--- a/basics.html
+++ b/basics.html
@@ -7,7 +7,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Ryan's Tennis Site</title>
+    <title>Basics</title>
 </head>
 <body class="container">
 
@@ -19,20 +19,29 @@
         </a>
         <ul class="nav nav-pills d-flex justify-content-center">
             <li class="nav-item">
-                <a class="nav-link" href="basics.html"><p>Basics</p></a>
+                <a class="nav-link" href="basics.html"><h4>Basics</h4></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="varients.html"><p>Varients</p></a>
+                <a class="nav-link" href="varients.html"><h4>Varients</h4></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pros.html"><p>Pros</p></a>
+                <a class="nav-link" href="pros.html"><h4>Pros</h4></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="why-play.html"><p>Why to play</p></a>
+                <a class="nav-link" href="why-play.html"><h4>Why to play</h4></a>
         </ul>
     </nav>
 
 
 
-    
+    <h1 class="text-center">The Basics of the sport</h1>
+    <p>
+        The objective of tennis is simply to hit the ball back and forth until one player hits it out of bounds or lets the ball bounce twice. A match usualy consists of several games where one side must win 4 points but they have to win by 2 points (so if the score was 4 to 3, they would keep playing) <a href="https://www.usta.com/en/home/improve/tips-and-instruction/national/tennis-scoring-rules.html">Link to full rules</a>
+    </p>
+
+    <a class="back tp-ylw home-btn top text-center" href="index.html">
+        <h2>
+            Back
+        </h2>
+    </a>
 </body>
