--- a/pros.html
+++ b/pros.html
@@ -7,9 +7,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Ryan's Tennis Site</title>
+    <title>Pros</title>
 </head>
-<body class="container home">
+<body class="container">
 
     <nav class="navbar fixed-top px-3 tp-ylw">
         <a class="navbar-brand" href="index.html"> 
@@ -34,31 +34,17 @@
 
 
 
-    <div class="row">
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn top text-center" href="basics.html">
-            <h2>
-                Basics
-            </h2>
-        </a>
-        <div class="col-md-2"></div>
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn top text-center" href="varients.html">
-            <h2>
-                Varients
-            </h2>
-        </a>
-    </div>
+    <h1 class="text-center">The Best of the Best</h1>
 
-    <div class="row">
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn text-center" href="pros.html">
-            <h2>
-                Pros
-            </h2>
-        </a>
-        <div class="col-md-2"></div>
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn text-center"  href="why-play.html">
-            <h2>
-                Why To Play
-            </h2>
-        </a>
-    </div>
+    <ul>
+        <li><p><b>Novak Djokovic: </b>He is the current rank number one. He is the only person to win every single major tournament (The 9 ATP Masters)</p></li>
+        <li><p><b>Rafael Nadal: </b>Another spectacular player. One fun fact is that he plays left handed but writes right handed</p></li>
+        <li><p><b>Carlos Alcaraz: </b>A young, upcoming player. He is the youngest player to ever beat Nadal and Djokovic</p></li>
+    </ul>
+
+    <a class="back tp-ylw home-btn top text-center" href="index.html">
+        <h2>
+            Back
+        </h2>
+    </a>
 </body>
