--- a/varients.html
+++ b/varients.html
@@ -7,9 +7,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Ryan's Tennis Site</title>
+    <title>Varients</title>
 </head>
-<body class="container home">
+<body class="container">
 
     <nav class="navbar fixed-top px-3 tp-ylw">
         <a class="navbar-brand" href="index.html"> 
@@ -34,31 +34,11 @@
 
 
 
-    <div class="row">
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn top text-center" href="basics.html">
-            <h2>
-                Basics
-            </h2>
-        </a>
-        <div class="col-md-2"></div>
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn top text-center" href="varients.html">
-            <h2>
-                Varients
-            </h2>
-        </a>
-    </div>
+    <h1 class="text-center">Varients of the Game</h1>
 
-    <div class="row">
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn text-center" href="pros.html">
-            <h2>
-                Pros
-            </h2>
-        </a>
-        <div class="col-md-2"></div>
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn text-center"  href="why-play.html">
-            <h2>
-                Why To Play
-            </h2>
-        </a>
-    </div>
+    <a class="back tp-ylw home-btn top text-center" href="index.html">
+        <h2>
+            Back
+        </h2>
+    </a>
 </body>
