--- a/pages/varients.html
+++ b/pages/varients.html
@@ -6,29 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Varients</title>
 </head>
 <body class="container">
 
     <nav class="navbar fixed-top px-3 tp-ylw">
-        <a class="navbar-brand" href="/pages/index.html"> 
+        <a class="navbar-brand" href="../pages/index.html"> 
             <h3>
                 Ryan's Tennis Site
             </h3>
         </a>
         <ul class="nav nav-pills d-flex justify-content-center">
             <li class="nav-item">
-                <a class="nav-link" href="/pages/basics.html"><h4>Basics</h4></a>
+                <a class="nav-link" href="../pages/basics.html"><h4>Basics</h4></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/pages/varients.html"><h4>Varients</h4></a>
+                <a class="nav-link" href="../pages/varients.html"><h4>Varients</h4></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/pages/pros.html"><h4>Pros</h4></a>
+                <a class="nav-link" href="../pages/pros.html"><h4>Pros</h4></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/pages/why-play.html"><h4>Why to play</h4></a>
+                <a class="nav-link" href="../pages/why-play.html"><h4>Why to play</h4></a>
         </ul>
     </nav>
 
@@ -55,7 +55,7 @@
         </tr>
     </table>
 
-    <a class="back tp-ylw home-btn top text-center" href="/pages/index.html">
+    <a class="back tp-ylw home-btn top text-center" href="../pages/index.html">
         <h2>
             Back
         </h2>
