--- a/pages/pros.html
+++ b/pages/pros.html
@@ -43,9 +43,9 @@
     </ul>
 
     <div class="row">
-        <div class="col-sm-12 col-md-4 text-center"><img src="../images/djocavitch.jpg"> <h5>Novak Djokovic</h5></div>
-        <div class="col-sm-12 col-md-4 text-center"><img src="../images/nadal.jpg"> <h5>Rafael Nadal</h5></div>
-        <div class="col-sm-12 col-md-4 text-center"><img src="../images/alcaraz.jpg"> <h5>Carlos Alcaraz</h5></div>
+        <div class="col-sm-12 col-md-4 text-center img-holder"><img src="../images/djocavitch.jpg"> <h5>Novak Djokovic</h5></div>
+        <div class="col-sm-12 col-md-4 text-center img-holder"><img src="../images/nadal.jpg"> <h5>Rafael Nadal</h5></div>
+        <div class="col-sm-12 col-md-4 text-center img-holder"><img src="../images/alcaraz.jpg"> <h5>Carlos Alcaraz</h5></div>
     </div>
 
     <a class="back tp-ylw home-btn top text-center" href="../pages/index.html">
