--- a/index.html
+++ b/index.html
@@ -6,41 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Ryan's Tennis Site</title>
 </head>
 <body class="container home">
     <nav class="navbar fixed-top px-3 tp-ylw">
-        <a class="navbar-brand" href="../pages/index.html"> 
+        <a class="navbar-brand" href="index.html"> 
             <h3>
                 Ryan's Tennis Site
             </h3>
         </a>
         <ul class="nav nav-pills d-flex justify-content-center">
             <li class="nav-item">
-                <a class="nav-link" href="../pages/basics.html"><h4>Basics</h4></a>
+                <a class="nav-link" href="basics.html"><h4>Basics</h4></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../pages/varients.html"><h4>Varients</h4></a>
+                <a class="nav-link" href="varients.html"><h4>Varients</h4></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../pages/pros.html"><h4>Pros</h4></a>
+                <a class="nav-link" href="pros.html"><h4>Pros</h4></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../pages/why-play.html"><h4>Why to play</h4></a>
+                <a class="nav-link" href="why-play.html"><h4>Why to play</h4></a>
         </ul>
     </nav>
 
 
 
     <div class="row">
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn top text-center" href="../pages/basics.html">
+        <a class="col-sm-12 col-md-5 tp-ylw home-btn top text-center" href="basics.html">
             <h2>
                 Basics
             </h2>
         </a>
         <div class="col-md-2"></div>
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn top text-center" href="../pages/varients.html">
+        <a class="col-sm-12 col-md-5 tp-ylw home-btn top text-center" href="varients.html">
             <h2>
                 Varients
             </h2>
@@ -48,13 +48,13 @@
     </div>
 
     <div class="row">
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn text-center" href="../pages/pros.html">
+        <a class="col-sm-12 col-md-5 tp-ylw home-btn text-center" href="pros.html">
             <h2>
                 Pros
             </h2>
         </a>
         <div class="col-md-2"></div>
-        <a class="col-sm-12 col-md-5 tp-ylw home-btn text-center"  href="../pages/why-play.html">
+        <a class="col-sm-12 col-md-5 tp-ylw home-btn text-center"  href="why-play.html">
             <h2>
                 Why To Play
             </h2>
