--- a/pros.html
+++ b/pros.html
@@ -6,29 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Pros</title>
 </head>
 <body class="container">
 
     <nav class="navbar fixed-top px-3 tp-ylw">
-        <a class="navbar-brand" href="../pages/index.html"> 
+        <a class="navbar-brand" href="index.html"> 
             <h3>
                 Ryan's Tennis Site
             </h3>
         </a>
         <ul class="nav nav-pills d-flex justify-content-center">
             <li class="nav-item">
-                <a class="nav-link" href="../pages/basics.html"><h4>Basics</h4></a>
+                <a class="nav-link" href="basics.html"><h4>Basics</h4></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../pages/varients.html"><h4>Varients</h4></a>
+                <a class="nav-link" href="varients.html"><h4>Varients</h4></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../pages/pros.html"><h4>Pros</h4></a>
+                <a class="nav-link" href="pros.html"><h4>Pros</h4></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../pages/why-play.html"><h4>Why to play</h4></a>
+                <a class="nav-link" href="why-play.html"><h4>Why to play</h4></a>
         </ul>
     </nav>
 
@@ -43,12 +43,12 @@
     </ul>
 
     <div class="row">
-        <div class="col-sm-12 col-md-4 text-center img-holder"><img src="../images/djocavitch.jpg"> <h5>Novak Djokovic</h5></div>
-        <div class="col-sm-12 col-md-4 text-center img-holder"><img src="../images/nadal.jpg"> <h5>Rafael Nadal</h5></div>
-        <div class="col-sm-12 col-md-4 text-center img-holder"><img src="../images/alcaraz.jpg"> <h5>Carlos Alcaraz</h5></div>
+        <div class="col-sm-12 col-md-4 text-center img-holder"><img src="images/djocavitch.jpg"> <h5>Novak Djokovic</h5></div>
+        <div class="col-sm-12 col-md-4 text-center img-holder"><img src="images/nadal.jpg"> <h5>Rafael Nadal</h5></div>
+        <div class="col-sm-12 col-md-4 text-center img-holder"><img src="images/alcaraz.jpg"> <h5>Carlos Alcaraz</h5></div>
     </div>
 
-    <a class="back tp-ylw home-btn top text-center" href="../pages/index.html">
+    <a class="back tp-ylw home-btn top text-center" href="index.html">
         <h2>
             Back
         </h2>
